[tool.poetry]
name = "nba-stats-app"
version = "0.1.0"
description = ""
authors = ["shuntaaaaabbbbb <shutaweb@.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"
nba-api = "^1.6.1"
matplotlib = "^3.9.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
